Fixed an issue on cSteele chicken page where the list's weren't aligning right

--- a/courses/cSteele-FSWD-Bootcamp-2024/courseProjects/chickens/styles.css
+++ b/courses/cSteele-FSWD-Bootcamp-2024/courseProjects/chickens/styles.css
@@ -4,7 +4,11 @@ section img {
 }
 
 .navbar {
-   width: 65%;
+   width: 47%;
    display: flex;
    justify-content: space-evenly;
+}
+
+ul {
+   display: flow-root;
 }
