--- a/css/root.css
+++ b/css/root.css
@@ -197,7 +197,7 @@ ol {
 }
 
 li {
-    margin-top: 12px;
+    margin-top: 5px;
 }
 
 
